# iterum

./: .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml
app/: __init__.py  config.py  context_formatter.py  dependencies.py  kalshi_demo.py  main.py  mistake_memory.py  models.py  ranking.py  retrieval.py  store.py
app/adapters/: __init__.py  sqlite.py  web.py
app/routes/: __init__.py  context.py  debug.py
openclaw-plugin/: index.js  openclaw.plugin.json  package.json
skills/iterum/: OPENCLAW_INTEGRATION.md  README.md  SKILL.md  tool_wrapper.py
skills/iterum/agents/: openai.yaml
skills/iterum/references/: tooling.md
skills/iterum/scripts/: retrieve_context.sh  store_fact.sh  store_observation.sh
src/: config.rs  error.rs  formatter.rs  lib.rs  main.rs  models.rs  ranking.rs  retrieval.rs
src/extractors/: cli.rs  mod.rs  sqlite.rs  web.rs
src/routes/: context.rs  debug.rs  events.rs  mod.rs
src/store/: memory.rs  mod.rs  redis_store.rs
tests/: integration.rs  test_api_integration.py  test_context_retrieval.py  test_kalshi_demo.py  test_sqlite_adapter.py  test_web_adapter.py
