[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iterum"
version = "0.1.0"
description = "Redis-backed mistake memory for OpenClaw Kalshi demos"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "redis>=5.0,<6.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.23,<3.0",
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

