[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iterum"
version = "0.1.0"
description = "Redis-backed operational context service for OpenClaw"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pydantic",
  "pydantic-settings",
  "redis",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
